<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="emptyViewVisible"
            type="boolean" />

        <variable
            name="tutorialScreenVisible"
            type="boolean" />

        <variable
            name="tutorialOnClickHandler"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.kobus.pitzer.cinephind.repository.viewmodels.MovieViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_dark"
        tools:context=".fragments.MovieViewFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movies"
            backgroundColour="@{viewModel.currentItemType}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="4dp"
            android:paddingBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_network_state"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="16dp"
            android:src="@drawable/network_error"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="@{emptyViewVisible? View.VISIBLE : View.GONE}">

            <RelativeLayout
                android:id="@+id/rly_empty_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_empty_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/no_movies_found"
                    android:textColor="@color/grey_light"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_empty_icon"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:layout_below="@id/tv_empty_title"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/movie_placeholder" />


            </RelativeLayout>
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/tutorial_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_transparent"
            android:onClick="@{tutorialOnClickHandler}"
            android:visibility="@{tutorialScreenVisible? View.VISIBLE : View.GONE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:text="@string/click_here_to_search"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintRight_toLeftOf="@id/tutorial_screen_search_arrow"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/tutorial_screen_search_arrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/arrow_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tutorial_screen_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingStart="20dp"
                android:paddingBottom="90dp"
                android:text="@string/select_movies"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tutorial_screen_series"
                app:layout_constraintStart_toStartOf="parent" />


            <ImageView
                android:id="@+id/tutorial_screen_movie_arrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/arrow_down"
                app:layout_constraintEnd_toEndOf="@id/tutorial_screen_movies"
                app:layout_constraintTop_toTopOf="@id/tutorial_screen_movies" />


            <TextView
                android:id="@+id/tutorial_screen_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:paddingBottom="90dp"
                android:paddingEnd="40dp"
                android:text="@string/select_series"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tutorial_screen_movies" />

            <ImageView
                android:id="@+id/tutorial_screen_series_arrow"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/arrow_down"
                app:layout_constraintStart_toStartOf="@id/tutorial_screen_series"
                app:layout_constraintTop_toTopOf="@id/tutorial_screen_series" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>