<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="favouriteOnClickHandler"
            type="android.view.View.OnClickListener" />

        <variable
            name="viewModel"
            type="com.kobus.pitzer.cinephind.repository.viewmodels.MovieViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/red_light">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="16dp"
            tools:context=".fragments.MovieDetailViewFragment">

            <ImageView
                android:id="@+id/poster_BG"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="centerCrop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/poster"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:background="@drawable/movie_placeholder"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="W,11:16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_favourite"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="36dp"
                android:onClick="@{favouriteOnClickHandler}"
                android:src="@{viewModel.isFavourited ? @drawable/heart_filled : @drawable/heart}"
                app:layout_constraintBottom_toBottomOf="@id/poster_BG"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster_BG" />


            <ImageView
                android:id="@+id/cards_BG"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_cornerns"
                app:layout_constraintBottom_toTopOf="@id/plot"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@{viewModel.currentMovieName}"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/poster" />

            <TextView
                android:id="@+id/release_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/release"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/runtime"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.currentMovieRelease}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/release_heading"
                app:layout_constraintRight_toRightOf="@id/release_heading"
                app:layout_constraintTop_toBottomOf="@id/release_heading" />


            <TextView
                android:id="@+id/runtime_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/runtime"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/release"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <TextView
                android:id="@+id/runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.currentMovieRuntime}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/runtime_heading"
                app:layout_constraintRight_toRightOf="@id/runtime_heading"
                app:layout_constraintTop_toBottomOf="@id/runtime_heading" />

            <TextView
                android:id="@+id/genre_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/genre"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/runtime" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@{viewModel.currentMovieGenre}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/genre_heading"
                app:layout_constraintRight_toRightOf="@id/genre_heading"
                app:layout_constraintTop_toBottomOf="@id/genre_heading" />

            <TextView
                android:id="@+id/rating_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/imdb_rating"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/votes"
                app:layout_constraintTop_toBottomOf="@id/genre" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:text="@{viewModel.currentMovieRating}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/rating_heading"
                app:layout_constraintRight_toRightOf="@id/rating_heading"
                app:layout_constraintTop_toBottomOf="@id/rating_heading" />

            <TextView
                android:id="@+id/votes_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/imdb_votes"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genre" />

            <TextView
                android:id="@+id/votes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.currentMovieVotes}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/votes_heading"
                app:layout_constraintRight_toRightOf="@id/votes_heading"
                app:layout_constraintTop_toBottomOf="@id/votes_heading" />

            <TextView
                android:id="@+id/language_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/language"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/votes"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genre" />

            <TextView
                android:id="@+id/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.currentMovieLanguage}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/language_heading"
                app:layout_constraintRight_toRightOf="@id/language_heading"
                app:layout_constraintTop_toBottomOf="@id/language_heading" />

            <TextView
                android:id="@+id/director_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/director"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/language" />

            <TextView
                android:id="@+id/director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:text="@{viewModel.currentMovieDirector}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="@id/director_heading"
                app:layout_constraintRight_toRightOf="@id/director_heading"
                app:layout_constraintTop_toBottomOf="@id/director_heading" />

            <TextView
                android:id="@+id/plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="16dp"
                android:text="@{viewModel.currentMoviePlot}"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/director" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>